--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <!-- Home Section Start -->
 <section class="home" id="home">
     <div class="social">
-        <a href="https://www.linkedin.com/in/jatin-kumar-809458246/"><i class='bx bxl-linkedin'></i></a>
+        <a href="https://www.linkedin.com/in/sanchit-saini-103962236/"><i class='bx bxl-linkedin'></i></a>
        
-        <a href="https://github.com/Jatinkumar78"><i class='bx bxl-github'></i></a>
+        <a href="https://github.com/Sanchit081"><i class='bx bxl-github'></i></a>
 
         <a href="https://www.instagram.com/jatinkumar__78/"><i class='bx bxl-instagram'></i></a>
 
