--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
     </div>
     <div class="home-img">
-        <img src="IMG111.jpg" alt="">
+        <img src="img.jpg" alt="">
     </div>
     <div class="home-text">
         <span>Hello, I'm</span>
-        <h1> Jatin Kumar </h1>
+        <h1> Sanchit Saini</h1>
         <h2>Front-end Developer </h2>
-        <p> <br>  pursuing Btech In CS<br> From CHITKARA UNIVERSITY SOLAN</p>
+        <p> <br>  pursuing Btech In CSE<br> From CHITKARA UNIVERSITY SOLAN</p>
         
     </div>
 </section>
@@ -58,7 +58,7 @@
         <h2>About Me</h2>
         <span>Introduction</span>
     </div>
-     <P> Jatin Kumar, a dynamic front-end developer hailing from Chitkara University, Baddi. My proficiency spans HTML, CSS, JavaScript, MongoDB, React.js, Node.js, Java, DSA, and C++. Armed with a creative flair and a keen eye for detail, I excel in crafting engaging user interfaces. Eager to contribute my skills to innovative and challenging projects, I am poised to make a lasting impact in the world of web development.</P>
+     <P> Sanchit, a dynamic front-end developer hailing from Chitkara University, Baddi. My proficiency spans HTML, CSS, JavaScript, MongoDB, React.js, Node.js, Java, DSA, and C++. Armed with a creative flair and a keen eye for detail, I excel in crafting engaging user interfaces. Eager to contribute my skills to innovative and challenging projects, I am poised to make a lasting impact in the world of web development.</P>
     <div class="about-container">
         <div class="about-img">
             <img src="ppp.jfif" alt="" class="round-image">
