--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         
         <a href="https://www.linkedin.com/in/jatin-kumar-809458246/"><i class='bx bxl-linkedin'></i></a>
        
-        <a href="https://github.com/Jatinkumar78"><i class='bx bxl-github'></i></a>
+        <a href="https://github.com/Sanchit081"><i class='bx bxl-github'></i></a>
 
         <a href="#"><i class='bx bxl-instagramFanpage'></i></a>
 
@@ -270,7 +270,7 @@
 </div>
 
 <div class="copyright">
-    &#169; Jatin Kumar Front-end Developer | All Right Reserved.</p>
+    &#169; Sanchit Saini Front-end Developer | All Right Reserved.</p>
 
 
 
